--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Yew • Counter</title>
+    <title>Imporstro</title>
 
     <link data-trunk rel="rust" />
     <link data-trunk rel="sass" href="index.scss" />
