--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
   <head>
-    <meta charset="utf-8" />
-    <title>Imporstro</title>
-
-    <link data-trunk rel="rust" />
-    <link data-trunk rel="sass" href="index.scss" />
+    <meta charset="utf-8">
+    <title>Impostro</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-
-  <body></body>
+  <body>
+    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <script src="./bootstrap.js"></script>
+  </body>
 </html>
